--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,54 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[Current Version: 1.1.2c]
+###Changed
+- Corrected TOMB-Json not correctly escaping quotes, which lead to broken fields in Splunk
+
+### Added
+- Additional Containers to TOMB-EventLog which was preventing sysmon collection
+- Profiles switch for different eventlog collections based off requirements
+
+### Fixes
+- Fixed issue with TOMB-Registry not providing subkey values
+- Fixed issue with TOMB-Json escaping characters in a wrong order
+- No additional open issues on DI2E or Git
+
+### Issues 
+- No additional open issues on DI2E or Git
+
+### TODO
+- Modify the Splunk TA setup for better formatting and removing additional whitespaces
+- Add additional modules to collect Startup processes/service
+- Add additional module to collect AutoRuns
+- Add additional module to establish baselines for Legitimate Windows processes
+- Add the ability to collect on OS outside of Windows
+=========================================================================================================================
+
+##[Previous Changes]
+##[Current Version: 1.1.2b]
+###Changed
+- Temporary switch made to convertto-json over TOMB-Json as there is an issue with escaping characters
+
+### Added
+- Additional Containers to TOMB-EventLog which was preventing sysmon collection
+- Profiles switch for different eventlog collections based off requirements
+
+### Fixes
+- No additional open issues on DI2E or Git
+
+### Issues 
+- Unfound solution for invalid parsing of events within splunk. Splunk has been found to pool multiple events within a single event
+
+### TODO
+- Modify the Splunk TA setup for better formatting and removing additional whitespaces
+- Add additional modules to collect Startup processes/service
+- Add additional module to collect AutoRuns
+- Add additional module to establish baselines for Legitimate Windows processes
+- Add the ability to collect on OS outside of Windows
+=========================================================================================================================
+
+##[Previous Changes]
 ##[Current Version: 1.1.1]
 ###Changed
 - Tweaked parameters in order to avoid future confusion (See Issue #8 below)
@@ -23,9 +71,8 @@ All notable changes to this project will be documented in this file.
 - Add additional module to collect AutoRuns
 - Add additional module to establish baselines for Legitimate Windows processes
 - Add the ability to collect on OS outside of Windows
-
 =========================================================================================================================
-##[Previous Changes]
+
 ##[Version 1.1.0]
 ###Changed
 - Logic for Signatures and Registry collections were tweaked for better formatting
@@ -49,7 +96,6 @@ All notable changes to this project will be documented in this file.
 - Add additional module to collect AutoRuns
 - Add additional module to establish baselines for Legitimate Windows processes
 - Add the ability to collect on OS outside of Windows
-
 =========================================================================================================================
 
 ##[Version 1.0.5]
@@ -74,7 +120,6 @@ All notable changes to this project will be documented in this file.
 - Add additional module to collect AutoRuns
 - Add additional module to establish baselines for Legitimate Windows processes
 - Add the ability to collect on OS outside of Windows
-
 =========================================================================================================================
 
 ##[Version 1.0.4]
